workflow-based/minio-tenant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-minio
  namespace: argo-artifacts
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: <your-hostname-here>
      http:
        paths:
        - path: /minio(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: argo-artifacts-console
              port:
                number: 9443
  ingressClassName: nginx
